# bevy_arkanoid

./: Cargo.toml
src/: assets.rs  ball.rs  bricks.rs  main.rs  paddle.rs  walls.rs
